Primeira estrutura do backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,72 @@
 spring.application.name=precatorio
+
+# configurações do servidor
+server.servlet.context-path=${CONTEXT_PATH:/}
+server.port=${SERVER_PORT:8080}
+spring.aop.auto=false
+spring.profiles.active=sso-security
+
+spring.data.jpa.repositories.bootstrap-mode=default
+
+spring.jackson.date-format="dd/MM/yyyy HH:mm"
+spring.jackson.time-zone=America/Sao_Paulo
+spring.jackson.locale=pt-BR
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://10.10.0.13:5432/dbsgj_teste}
+spring.datasource.username=${DB_SENHA:web}
+spring.datasource.password=${DB_SENHA:1}
+
+spring.jpa.properties.hibernate.default_schema=precatorio
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+
+spring.main.allow-circular-references=true
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+spring.servlet.multipart.max-file-size=52MB
+spring.servlet.multipart.max-request-size=52MB
+
+# [email]
+spring.mail.default-encoding=UTF-8
+spring.mail.host=mailer.cnj.jus.br
+spring.mail.port=25
+spring.mail.username=sistemas@cnj.jus.br
+spring.mail.password=11
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# [Keycloak]
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://sso.stg.cloud.pje.jus.br/auth/realms/cnj
+
+# [Usado no CorporativoService]
+pdpj.incluir.status=${INCLUIR_STATUS:true}
+pdpj.keycloakClient=precatorio
+pdpj.gatewayUrl=${GATEWAY_URL:https://gateway.stg.cloud.pje.jus.br}
+pdpj.corporativoUrl=${API_CORPORATIVO_URL:https://corporativoapi.stg.pdpj.jus.br/api/v1}
+pdpj.corporativoApiToken=${API_CORPORATIVO_TOKEN:36|tE4nms9JfoNMnHm6jXgByv5QXKAtI3d0Xj4cHsbVbe92e109}
+
+# [PJE/EPROC]
+aplicacao.ambiente.mni.url=${PJE_MNI_URL:https://sus.pje.stg.apps.tjap.jus.br/1g/intercomunicacao?wsdl}
+aplicacao.ambiente.mni.usuario=${PJE_MNI_USUARIO:34870576000121}
+aplicacao.ambiente.mni.senha=${PJE_MNI_SENHA:usuarioRemessa123}
+aplicacao.ambiente.mni.tipo-doc.precatorio=${PJE_MNI_DOC_PRECATORIO:317}
+aplicacao.ambiente.mni.tipo-doc.rpv=${PJE_MNI_DOC_RPV:14427}
+aplicacao.ambiente.mni.tipo-doc.planilha=${PJE_MNI_DOC_PLANILHA:8030025}
+aplicacao.ambiente.mni.tipo-doc.procuracao=${PJE_MNI_DOC_PROCURACAO:4050007}
+aplicacao.ambiente.mni.tipo-doc.sentenca=${PJE_MNI_DOC_SENTENCA:4050018}
+aplicacao.ambiente.mni.tipo-doc.identificacao=${PJE_MNI_DOC_IDENTIFICACAO:4050010}
+aplicacao.ambiente.mni.tipo-doc.acordao=${PJE_MNI_DOC_ACORDAO:4050030}
+aplicacao.ambiente.mni.tipo-doc.protocolo-entrega=${PJE_MNI_DOC_PROTOCOLO_ENTREGA:8030103}
+
+aplicacao.ambiente.reportjs.url=${REPORTJS_URL:https://cluster.tjap.jus.br/jsreport_tucujuris/api/report}
+aplicacao.ambiente.reportjs.token=${REPORTJS_TOKEN:bHVjYXMuZnJlaXRhc0B0amFwLmp1cy5icjpkMyQxJDAwN3o=}
+
+aplicacao.ambiente.assinador.url=${ASS_TUCUJURIS_A1_SIGNER:https://cluster.tjap.jus.br/tucujuris-a1-signer}
+aplicacao.ambiente.assinador.token=${ASS_TUCUJURIS_A1_SIGNER_TOKEN:b3449c0f-b207-a51d-e13c-8768dba3ba63}
+
+server.error.include-message=always
