Configuração do swagger

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,10 @@ server.port=${SERVER_PORT:8080}
 spring.aop.auto=false
 spring.profiles.active=sso-security
 
+# application.properties
+springdoc.swagger-ui.path=/docs
+springdoc.api-docs.path=/api-docs
+
 spring.data.jpa.repositories.bootstrap-mode=default
 
 spring.jackson.date-format="dd/MM/yyyy HH:mm"
@@ -15,6 +19,7 @@ spring.jackson.locale=pt-BR
 spring.datasource.url=${DB_URL:jdbc:postgresql://10.10.0.13:5432/dbsgj_teste}
 spring.datasource.username=${DB_SENHA:web}
 spring.datasource.password=${DB_SENHA:1}
+spring.flyway.enabled=false
 
 spring.jpa.properties.hibernate.default_schema=precatorio
 spring.jpa.hibernate.ddl-auto=none
