IMplementado o tipo de calculo do pagamento

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,18 @@
 spring.application.name=precatorio
 
 # configurações do servidor
-server.servlet.context-path=${CONTEXT_PATH:/}
-server.port=${SERVER_PORT:8080}
+server.servlet.context-path=${APP_CONTEXT_PATH:/}
+server.port=${SERVER_PORT:8084}
 spring.aop.auto=false
 spring.profiles.active=sso-security
 
 # application.properties
-springdoc.swagger-ui.path=/docs
 springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.config-url=${APP_CONTEXT:/}api-docs/swagger-config
+springdoc.swagger-ui.urls[0].url=${APP_CONTEXT:/}api-docs
+springdoc.swagger-ui.urls[0].name=API
+
 
 spring.data.jpa.repositories.bootstrap-mode=default
 
@@ -73,5 +77,7 @@ aplicacao.ambiente.reportjs.token=${REPORTJS_TOKEN:bHVjYXMuZnJlaXRhc0B0amFwLmp1c
 
 aplicacao.ambiente.assinador.url=${ASS_TUCUJURIS_A1_SIGNER:https://cluster.tjap.jus.br/tucujuris-a1-signer}
 aplicacao.ambiente.assinador.token=${ASS_TUCUJURIS_A1_SIGNER_TOKEN:b3449c0f-b207-a51d-e13c-8768dba3ba63}
+
+aplicacao.api.swagger.url=${SWAGGER-SERVER-URL:http://localhost:8084}
 
 server.error.include-message=always
