--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -168,6 +168,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>precatorio</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
