Finalizando o resumos do calculo para compor o documento PDF que será anexado ao processo

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.datasource.username=${DB_SENHA:web}
 spring.datasource.password=${DB_SENHA:1}
 spring.flyway.enabled=false
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=precatorio
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=false
