--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -170,6 +170,18 @@
             <artifactId>jasperreports</artifactId>
             <version>6.21.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.librepdf</groupId>
+            <artifactId>openpdf</artifactId>
+            <version>1.3.39</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-transcoder</artifactId>
+            <version>1.17</version>
+        </dependency>
     </dependencies>
 
     <build>
